--- a/style.css
+++ b/style.css
@@ -1,1 +1,20 @@
 
+body{
+    background: lightgray;
+    font-family: sans-serif;
+
+}
+
+h1{
+    background: blue;
+    color:red;
+}
+
+.banner{
+    width: 300px;
+    height: 100px;
+}
+
+.pimg{
+    text-align: center;
+}
